# keras_informed_layer

./: .python-version  LICENSE  pyproject.toml  tox.ini
keras_informed_layer/: layers.py
tests/: __init__.py  test_layers.py
