[tool.poetry]
name = "keras-informed-layer"
version = "0.1.0"
description = "Keras Layer class for knowledge primed layers."
authors = ["Carlos Loucera <carlos.loucera@juntadeandalucia.es>"]
license = "MIT"
readme = "README.md"
packages = [{include = "keras_informed_layer"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
bandit = "^1.7.4"
safety = "^2.3.1"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
tox = "^3.26.0"
tox-poetry-installer = "^0.10.0"
tox-pyenv = "^1.1.0"
tox-gh-actions = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ff -ra -v"
python_functions = [
    "test_*",
]
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
